<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursePage"
    android:background="@color/black"
    android:id="@+id/coursepagebg">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:background="@color/sidecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="84dp"
            android:layout_height="52dp"
            android:contentDescription="@string/SalesIcon"
            android:onClick="openCart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/condencedgeek" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="114dp"
            android:layout_height="26dp"
            android:onClick="OpenOrders"
            android:text="Мои заказы"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Main"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="180dp"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:onClick="openMain"
            android:text="@string/Main_tag"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.513" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="86dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:text="@string/Name1"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="-45dp"
            android:text="@string/Name2"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="365dp"
        android:layout_height="196dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@mipmap/komp_foreground" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:text="@string/pcname"
        android:textColor="#FF6600"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="378dp"
        android:layout_height="241dp"
        android:layout_marginBottom="60dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:id="@+id/courseBG1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"

            android:orientation="vertical"
            android:paddingBottom="30dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Spisok"
                    android:layout_width="match_parent"
                    android:layout_height="169dp"

                    android:layout_margin="10dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/cpdesc"
                    android:textColor="#FF6600"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/Price"
            android:layout_width="101dp"
            android:layout_height="51dp"
            android:layout_marginLeft="137dp"
            android:layout_marginTop="200dp"
            android:text="TextView"
            android:textColor="#FF6600"/>


    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/addCart"
        android:layout_width="165dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:onClick="AddToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/group_1" />



</androidx.constraintlayout.widget.ConstraintLayout>
